Fix save and share wrap issue. Move create button. Update license link.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -94,6 +94,7 @@ body {
 
 .save, .share {
     padding-bottom: 10px;
+    line-height: 35px;
 }
 
 .save a, .share a {
